Added Basic Layouts and Resources